create google authentication

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,5 +33,9 @@
         android:layout_marginTop="50dp"
         android:text="Login" />
 
-
+    <com.google.android.gms.common.SignInButton
+        android:layout_marginTop="20dp"
+        android:id="@+id/sign_in_google"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
